# jfp-paradox

./: .gitignore  AUTHORS.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP.md  pyproject.toml  requirements.txt
.github/workflows/: electron.yml  test.yml
console/: api_client.py
daemon/: actions.py  governor.py  jfpd.py  logger.py  metrics.py  supervisor.py
docs/: index.html
shared/: protocol.json
tests/: conftest.py  test_governor_actions.py  test_integration.py  test_metrics.py
tools/: network_simulator.py  verify_chain.py
ui/: package.json  tsconfig.json  vite.config.ts
ui/electron/: main.js  preload.js
ui/public/: index.html
ui/src/: App.tsx  index.css
