[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jfp-paradox"
version = "0.1.0"
description = "Autonomous Network Governance System"
readme = "README.md"
license = {text = "MIT"}
authors = [
{name = "JFP PARADOX Contributors"}
]
classifiers = [
Development Status :: 3 - Alpha 
Intended Audience :: Developers 
License :: OSI Approved :: MIT License 
Programming Language :: Python :: 3 
Programming Language :: Python :: 3.12 ] requires-python
=
>=3.12 dependencies
=
[ "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
pytest>=7.0.0 "pytest-asyncio>=0.21.0" ] ui
=
[ "electron>=28.0.0"
]

[project.scripts]
jfpd = "daemon.jfpd:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
